--- a/governance/test-sdk/Cargo.toml
+++ b/governance/test-sdk/Cargo.toml
@@ -22,4 +22,7 @@ solana-sdk = ">=1.18.2,<=2"
 spl-token = { version = "4.0", path = "../../token/program", features = [
   "no-entrypoint",
 ] }
+spl-token-2022 = { version = "3.0.2", path = "../../token/program-2022", features = [
+  "no-entrypoint",
+] }
 thiserror = "1.0"
