--- a/governance/test-sdk/Cargo.toml
+++ b/governance/test-sdk/Cargo.toml
@@ -25,4 +25,6 @@ spl-token = { version = "4.0", path = "../../token/program", features = [
 spl-token-2022 = { version = "3.0.2", path = "../../token/program-2022", features = [
   "no-entrypoint",
 ] }
+spl-transfer-hook-interface = { version = "0.6.3", path = "../../token/transfer-hook/interface" }
+spl-token-client = { version = "0.9.2", path = "../../token/client" }
 thiserror = "1.0"
