--- a/governance/test-sdk/Cargo.toml
+++ b/governance/test-sdk/Cargo.toml
@@ -25,6 +25,10 @@ spl-token = { version = "4.0", path = "../../token/program", features = [
 spl-token-2022 = { version = "3.0.2", path = "../../token/program-2022", features = [
   "no-entrypoint",
 ] }
+spl-tlv-account-resolution = { version = "0.6.3", path = "../../libraries/tlv-account-resolution" }
 spl-transfer-hook-interface = { version = "0.6.3", path = "../../token/transfer-hook/interface" }
+spl-transfer-hook-example = { version = "0.6", path = "../../token/transfer-hook/example", features = [
+  "no-entrypoint",
+] }
 spl-token-client = { version = "0.9.2", path = "../../token/client" }
 thiserror = "1.0"
